--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
+    "postinstall": "npm run build",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate",
     "clean": "powershell -ExecutionPolicy Bypass -File cleanup.ps1",
     "analyze": "npx depcheck --ignores=\"@types/*,eslint*,prettier*,@replit/*\"",
     "audit": "npm audit",
@@ -46,14 +52,19 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cross-env": "^10.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.2",
+    "drizzle-kit": "^0.30.4",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
+    "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
@@ -67,8 +78,12 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.1",
+    "typescript": "5.6.3",
     "vaul": "^1.1.2",
+    "vite": "^5.4.19",
     "wouter": "^3.3.5",
     "zod": "^3.24.2"
   },
@@ -84,16 +99,7 @@
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.21",
-    "cross-env": "^10.0.0",
-    "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.19.1",
-    "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "@types/ws": "^8.5.13"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
