--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+.env
+.env.local
+.env.production
+.env.staging
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
